[package]
name = "kredis"
version = "0.1.0"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
description = "An ergonomic asynchronous Redis library"
readme = "README.md"
repository = "https://github.com/KennethWilke/kredis"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
kresp = "0.1.1"
multistream = "0.1.0"
anyhow = "1.0"
thiserror = "1.0"
